Implementing menu for different devices

--- a/dev/index.html
+++ b/dev/index.html
@@ -21,7 +21,7 @@
             <span class="navigation__icon">&nbsp;</span>
         </label>
 
-        <nav class="navigation__nav">
+        <nav class="navigation__float">
 
             <div class="logo-box">
                 <a href="#header"><img src="assets/images/logo-menu.svg" class="logo logo--menu" alt="Logotipo Museu Interactivo do Megalitismo"></a>
@@ -42,6 +42,19 @@
                 <img src="assets/images/icons/social-facebook-menu.svg" class="navigation__social-facebook" alt="Facebook">
             </div>
         </nav>
+
+        <nav class="navigation__main">
+            <ul class="navigation__main__list">
+                <li class="navigation__main__item"><a href="#museu" class="navigation__main__link">O Museu</a></li>
+                <li class="navigation__main__item"><a href="#megalitismo" class="navigation__main__link">Megalitismo</a></li>
+                <li class="navigation__main__item"><a href="#educacao" class="navigation__main__link">Educação</a></li>
+                <li class="navigation__main__item"><a href="#actividades" class="navigation__main__link">Actividades</a></li>
+                <li class="navigation__main__item"><a href="#horario" class="navigation__main__link">Horário</a></li>
+                <li class="navigation__main__item"><a href="#precario" class="navigation__main__link">Preçário</a></li>
+                <li class="navigation__main__item"><a href="#galeria" class="navigation__main__link">Galeria</a></li>
+                <li class="navigation__main__item"><a href="#contactos" class="navigation__main__link">Contactos</a></li>
+            </ul>
+        </nav>
     </div>
 
     <header class="header" id="header">
@@ -50,7 +63,7 @@
         </div>
 
         <div class="btn-box header__btn-box">
-            <a href="" class="btn btn-secondary btn-secondary--grey u-margin-left-xs">VER FILME PROMOCIONAL DO CONCELHO <span class="icon icon--video-camera--grey u-margin-left-s"></span></a>
+            <a href="" class="btn btn-tertiary u-margin-left-xs">VER FILME PROMOCIONAL DO CONCELHO <span class="icon icon--video-camera--grey u-margin-left-s"></span></a>
         </div>
         <div class="scroll-icon"></div>
     </header>
@@ -547,7 +560,7 @@
     <section class="contactos" id="contactos">
         <div class="contactos__mapa"></div>
         <div class="wrapper">
-            <h1 class="heading-primary heading-primary--s" data-section-title="CONTACTE-NOS">CONTACTE-NOS</h1>
+            <h1 class="heading-primary heading-primary--small" data-section-title="CONTACTE-NOS">CONTACTE-NOS</h1>
             <form action="" method="POST">
                 <div class="contactos__form">
                     <input class="contactos__nome" type="text" name="nome" placeholder="Nome">
