--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Museu Interactivo do Megalitismo</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/styles-ce4bc102b6.css"/>
+    <link rel="stylesheet" href="assets/styles/styles-6dcd8c715a.css"/>
     <script src="assets/scripts/Vendor-ee30c0f0f6.js"></script>
 </head>
 <body>
@@ -17,7 +17,7 @@
             <span class="navigation__icon">&nbsp;</span>
         </label>
 
-        <nav class="navigation__nav">
+        <nav class="navigation__float">
 
             <div class="logo-box">
                 <a href="#header"><img src="assets/images/logo-menu.svg" class="logo logo--menu" alt="Logotipo Museu Interactivo do Megalitismo"></a>
@@ -38,6 +38,19 @@
                 <img src="assets/images/icons/social-facebook-menu.svg" class="navigation__social-facebook" alt="Facebook">
             </div>
         </nav>
+
+        <nav class="navigation__main">
+            <ul class="navigation__main__list">
+                <li class="navigation__main__item"><a href="#museu" class="navigation__main__link">O Museu</a></li>
+                <li class="navigation__main__item"><a href="#megalitismo" class="navigation__main__link">Megalitismo</a></li>
+                <li class="navigation__main__item"><a href="#educacao" class="navigation__main__link">Educação</a></li>
+                <li class="navigation__main__item"><a href="#actividades" class="navigation__main__link">Actividades</a></li>
+                <li class="navigation__main__item"><a href="#horario" class="navigation__main__link">Horário</a></li>
+                <li class="navigation__main__item"><a href="#precario" class="navigation__main__link">Preçário</a></li>
+                <li class="navigation__main__item"><a href="#galeria" class="navigation__main__link">Galeria</a></li>
+                <li class="navigation__main__item"><a href="#contactos" class="navigation__main__link">Contactos</a></li>
+            </ul>
+        </nav>
     </div>
 
     <header class="header" id="header">
@@ -46,7 +59,7 @@
         </div>
 
         <div class="btn-box header__btn-box">
-            <a href="" class="btn btn-secondary btn-secondary--grey u-margin-left-xs">VER FILME PROMOCIONAL DO CONCELHO <span class="icon icon--video-camera--grey u-margin-left-s"></span></a>
+            <a href="" class="btn btn-tertiary u-margin-left-xs">VER FILME PROMOCIONAL DO CONCELHO <span class="icon icon--video-camera--grey u-margin-left-s"></span></a>
         </div>
         <div class="scroll-icon"></div>
     </header>
@@ -543,7 +556,7 @@
     <section class="contactos" id="contactos">
         <div class="contactos__mapa"></div>
         <div class="wrapper">
-            <h1 class="heading-primary heading-primary--s" data-section-title="CONTACTE-NOS">CONTACTE-NOS</h1>
+            <h1 class="heading-primary heading-primary--small" data-section-title="CONTACTE-NOS">CONTACTE-NOS</h1>
             <form action="" method="POST">
                 <div class="contactos__form">
                     <input class="contactos__nome" type="text" name="nome" placeholder="Nome">
@@ -584,6 +597,6 @@
     <script defer async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4sciudjQxavw9NnmO7iHR-HFJ3QK1cIw">
     </script>
-    <script src="assets/scripts/App-b1a510b56e.js"></script>
+    <script src="assets/scripts/App-115749264b.js"></script>
 </body>
 </html>
