--- a/dev/index.html
+++ b/dev/index.html
@@ -28,14 +28,14 @@
             </div>
 
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#museu" class="navigation__link">O Museu</a></li>
-                <li class="navigation__item"><a href="#megalitismo" class="navigation__link">Megalitismo</a></li>
-                <li class="navigation__item"><a href="#educacao" class="navigation__link">Educação</a></li>
-                <li class="navigation__item"><a href="#actividades" class="navigation__link">Actividades</a></li>
-                <li class="navigation__item"><a href="#horario" class="navigation__link">Horário</a></li>
-                <li class="navigation__item"><a href="#precario" class="navigation__link">Preçário</a></li>
-                <li class="navigation__item"><a href="#galeria" class="navigation__link">Galeria</a></li>
-                <li class="navigation__item"><a href="#contactos" class="navigation__link">Contactos</a></li>
+                <li class="navigation__item"><a href="#museu" class="navigation__link nav-link">O Museu</a></li>
+                <li class="navigation__item"><a href="#megalitismo" class="navigation__link nav-link">Megalitismo</a></li>
+                <li class="navigation__item"><a href="#educacao" class="navigation__link nav-link">Educação</a></li>
+                <li class="navigation__item"><a href="#actividades" class="navigation__link nav-link">Actividades</a></li>
+                <li class="navigation__item"><a href="#horario" class="navigation__link nav-link">Horário</a></li>
+                <li class="navigation__item"><a href="#precario" class="navigation__link nav-link">Preçário</a></li>
+                <li class="navigation__item"><a href="#galeria" class="navigation__link nav-link">Galeria</a></li>
+                <li class="navigation__item"><a href="#contactos" class="navigation__link nav-link">Contactos</a></li>
             </ul>
 
             <div class="navigation__social">
@@ -45,14 +45,14 @@
 
         <nav class="navigation__main">
             <ul class="navigation__main__list">
-                <li class="navigation__main__item"><a href="#museu" class="navigation__main__link">O Museu</a></li>
-                <li class="navigation__main__item"><a href="#megalitismo" class="navigation__main__link">Megalitismo</a></li>
-                <li class="navigation__main__item"><a href="#educacao" class="navigation__main__link">Educação</a></li>
-                <li class="navigation__main__item"><a href="#actividades" class="navigation__main__link">Actividades</a></li>
-                <li class="navigation__main__item"><a href="#horario" class="navigation__main__link">Horário</a></li>
-                <li class="navigation__main__item"><a href="#precario" class="navigation__main__link">Preçário</a></li>
-                <li class="navigation__main__item"><a href="#galeria" class="navigation__main__link">Galeria</a></li>
-                <li class="navigation__main__item"><a href="#contactos" class="navigation__main__link">Contactos</a></li>
+                <li class="navigation__main__item"><a href="#museu" class="navigation__main__link nav-link">O Museu</a></li>
+                <li class="navigation__main__item"><a href="#megalitismo" class="navigation__main__link nav-link">Megalitismo</a></li>
+                <li class="navigation__main__item"><a href="#educacao" class="navigation__main__link nav-link">Educação</a></li>
+                <li class="navigation__main__item"><a href="#actividades" class="navigation__main__link nav-link">Actividades</a></li>
+                <li class="navigation__main__item"><a href="#horario" class="navigation__main__link nav-link">Horário</a></li>
+                <li class="navigation__main__item"><a href="#precario" class="navigation__main__link nav-link">Preçário</a></li>
+                <li class="navigation__main__item"><a href="#galeria" class="navigation__main__link nav-link">Galeria</a></li>
+                <li class="navigation__main__item"><a href="#contactos" class="navigation__main__link nav-link">Contactos</a></li>
             </ul>
         </nav>
     </div>
