--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Museu Interactivo do Megalitismo</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/styles-6dcd8c715a.css"/>
+    <link rel="stylesheet" href="assets/styles/styles-cb9a55d3cb.css"/>
     <script src="assets/scripts/Vendor-ee30c0f0f6.js"></script>
 </head>
 <body>
@@ -24,14 +24,14 @@
             </div>
 
             <ul class="navigation__list">
-                <li class="navigation__item"><a href="#museu" class="navigation__link">O Museu</a></li>
-                <li class="navigation__item"><a href="#megalitismo" class="navigation__link">Megalitismo</a></li>
-                <li class="navigation__item"><a href="#educacao" class="navigation__link">Educação</a></li>
-                <li class="navigation__item"><a href="#actividades" class="navigation__link">Actividades</a></li>
-                <li class="navigation__item"><a href="#horario" class="navigation__link">Horário</a></li>
-                <li class="navigation__item"><a href="#precario" class="navigation__link">Preçário</a></li>
-                <li class="navigation__item"><a href="#galeria" class="navigation__link">Galeria</a></li>
-                <li class="navigation__item"><a href="#contactos" class="navigation__link">Contactos</a></li>
+                <li class="navigation__item"><a href="#museu" class="navigation__link nav-link">O Museu</a></li>
+                <li class="navigation__item"><a href="#megalitismo" class="navigation__link nav-link">Megalitismo</a></li>
+                <li class="navigation__item"><a href="#educacao" class="navigation__link nav-link">Educação</a></li>
+                <li class="navigation__item"><a href="#actividades" class="navigation__link nav-link">Actividades</a></li>
+                <li class="navigation__item"><a href="#horario" class="navigation__link nav-link">Horário</a></li>
+                <li class="navigation__item"><a href="#precario" class="navigation__link nav-link">Preçário</a></li>
+                <li class="navigation__item"><a href="#galeria" class="navigation__link nav-link">Galeria</a></li>
+                <li class="navigation__item"><a href="#contactos" class="navigation__link nav-link">Contactos</a></li>
             </ul>
 
             <div class="navigation__social">
@@ -41,14 +41,14 @@
 
         <nav class="navigation__main">
             <ul class="navigation__main__list">
-                <li class="navigation__main__item"><a href="#museu" class="navigation__main__link">O Museu</a></li>
-                <li class="navigation__main__item"><a href="#megalitismo" class="navigation__main__link">Megalitismo</a></li>
-                <li class="navigation__main__item"><a href="#educacao" class="navigation__main__link">Educação</a></li>
-                <li class="navigation__main__item"><a href="#actividades" class="navigation__main__link">Actividades</a></li>
-                <li class="navigation__main__item"><a href="#horario" class="navigation__main__link">Horário</a></li>
-                <li class="navigation__main__item"><a href="#precario" class="navigation__main__link">Preçário</a></li>
-                <li class="navigation__main__item"><a href="#galeria" class="navigation__main__link">Galeria</a></li>
-                <li class="navigation__main__item"><a href="#contactos" class="navigation__main__link">Contactos</a></li>
+                <li class="navigation__main__item"><a href="#museu" class="navigation__main__link nav-link">O Museu</a></li>
+                <li class="navigation__main__item"><a href="#megalitismo" class="navigation__main__link nav-link">Megalitismo</a></li>
+                <li class="navigation__main__item"><a href="#educacao" class="navigation__main__link nav-link">Educação</a></li>
+                <li class="navigation__main__item"><a href="#actividades" class="navigation__main__link nav-link">Actividades</a></li>
+                <li class="navigation__main__item"><a href="#horario" class="navigation__main__link nav-link">Horário</a></li>
+                <li class="navigation__main__item"><a href="#precario" class="navigation__main__link nav-link">Preçário</a></li>
+                <li class="navigation__main__item"><a href="#galeria" class="navigation__main__link nav-link">Galeria</a></li>
+                <li class="navigation__main__item"><a href="#contactos" class="navigation__main__link nav-link">Contactos</a></li>
             </ul>
         </nav>
     </div>
@@ -597,6 +597,6 @@
     <script defer async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA4sciudjQxavw9NnmO7iHR-HFJ3QK1cIw">
     </script>
-    <script src="assets/scripts/App-115749264b.js"></script>
+    <script src="assets/scripts/App-70dbcc4b3a.js"></script>
 </body>
 </html>
