Continuação do responsive do header

--- a/dev/index.html
+++ b/dev/index.html
@@ -62,8 +62,19 @@
             <img src="assets/images/logo.svg" class="logo" alt="Logotipo Museu Interactivo do Megalitismo">
         </div>
 
+        <div class="header__text-box">
+            <div class="header__missao">
+                <h6 class="sub-heading--secondary">Missão</h6>
+                <p class="paragraph--small">A missão do Museu Interactivo do Megalitismo consiste na valorização e divulgação do património megalítico do Concelho de Mora e na afirmação da memória histórico-cultural do seu povo.</p>
+            </div>
+            <div class="header__visao">
+                <h6 class="sub-heading--secondary">Visão</h6>
+                <p class="paragraph--small">Através da valorização e divulgação do nosso património megalítico, o Museu Interactivo do Megalitismo pretende contribuir para o enriquecimento social, cultural e económico do Concelho de Mora, e para a sua afirmação como referência nacional e internacional do megalitismo.</p>
+            </div>
+        </div>
+
         <div class="btn-box header__btn-box">
-            <a href="" class="btn btn-tertiary u-margin-left-xs">VER FILME PROMOCIONAL DO CONCELHO <span class="icon icon--video-camera--grey u-margin-left-s"></span></a>
+            <a href="" class="btn btn-tertiary">VER FILME PROMOCIONAL DO CONCELHO <span class="icon icon--video-camera--grey u-margin-left-s"></span></a>
         </div>
         <div class="scroll-icon"></div>
     </header>
