--- a/dev/index.html
+++ b/dev/index.html
@@ -74,7 +74,7 @@
         </div>
 
         <div class="btn-box header__btn-box">
-            <a href="" class="btn btn-tertiary">VER FILME PROMOCIONAL DO CONCELHO <span class="icon icon--video-camera--grey u-margin-left-s"></span></a>
+            <a href="" class="btn btn-tertiary">VER FILME PROMOCIONAL DO CONCELHO <span class="icon icon--video-camera--brown"></span></a>
         </div>
         <div class="scroll-icon"></div>
     </header>
