Valencias responsive completo

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Museu Interactivo do Megalitismo</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:300,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="assets/styles/styles-f38baeb94b.css"/>
+    <link rel="stylesheet" href="assets/styles/styles-b538faffe7.css"/>
     <script src="assets/scripts/Vendor-ee30c0f0f6.js"></script>
 </head>
 <body>
@@ -77,25 +77,34 @@
 
     <section class="museu" id="museu">
         <div class="wrapper">
-            <h1 class="heading-primary" data-section-title="O MUSEU">O MUSEU</h1>
+            <div class="museu__content">
+                <div class="museu__text-content">
+                    <h1 class="heading-primary" data-section-title="O MUSEU">O MUSEU</h1>
 
-            <p class="paragraph">Localizado praticamente no centro da vila de Mora, a escassos quilómetros do Fluviário, o Museu do Megalitismo, único a nível nacional, é a concretização de um sonho antigo da autarquia, no sentido da valorização do vasto e riquíssimo património megalítico existente no Concelho.</p>
-            <p class="paragraph">Inaugurado a 15 de Setembro de 2016, o Museu integra e reabilita a antiga Estação de Mora, e ainda dois novos edifícios destinados ao núcleo museológico e à área de cafetaria.</p>
-            <p class="paragraph">A estrutura antiga acolhe espaços de lazer para os jovens e crianças, com uma sala de internet e biblioteca, cujo acesso é livre, mais uma sala de actividades com diversos jogos interactivos, que, de forma lúdica, alargam o nosso conhecimento.</p>
-            <p class="paragraph">Construído de raiz, o espaço museológico de 750 metros quadrados acompanha a modelação do terreno, e integra três espaços representativos do quotidiano das populações: a Vida, a Morte e a Contemplação.</p>
-
-            <div class="museu__complete-content">
-                <p class="paragraph">Aqui, o visitante é acolhido por um filme em 3D, que retrata a vida num povoado neolítico, e nos faz viajar no tempo. As diferentes mesas interactivas permitem ao visitante aceder à informação sobre as peças expostas, algumas com mais de seis mil anos, descobrir como se fazem as escavações e partir à descoberta do maravilhoso mundo do megalitismo. No percurso, o visitante ter-se-á deixado surpreender pela presença inusitada de um homem em tamanho real a fazer placas de xisto…</p>
-                <p class="paragraph">As várias centenas de peças expostas, cedidas maioritariamente pelo Museu Nacional de Arqueologia, são provenientes das dezenas de escavações arqueológicas, que, no Concelho de Mora, tiveram início em 1914, com Vergílio Correia, de que resultou a obra El Neolítico de Pavía, editada em 1921.</p>
-                <p class="paragraph">Os quatro edifícios do Museu estão interligados por um corredor protegido com placas metálicas cujas pequenas aberturas simbolizam o geometrismo das placas de xisto.</p>
-                <p class="paragraph">Sejam, pois, bem-vindos!</p>
+                    <p class="paragraph">Localizado praticamente no centro da vila de Mora, a escassos quilómetros do Fluviário, o Museu do Megalitismo, único a nível nacional, é a concretização de um sonho antigo da autarquia, no sentido da valorização do vasto e riquíssimo património megalítico existente no Concelho.</p>
+                    <p class="paragraph">Inaugurado a 15 de Setembro de 2016, o Museu integra e reabilita a antiga Estação de Mora, e ainda dois novos edifícios destinados ao núcleo museológico e à área de cafetaria.</p>
+                    <p class="paragraph">A estrutura antiga acolhe espaços de lazer para os jovens e crianças, com uma sala de internet e biblioteca, cujo acesso é livre, mais uma sala de actividades com diversos jogos interactivos, que, de forma lúdica, alargam o nosso conhecimento.</p>
+                    <p class="paragraph">Construído de raiz, o espaço museológico de 750 metros quadrados acompanha a modelação do terreno, e integra três espaços representativos do quotidiano das populações: a Vida, a Morte e a Contemplação.</p>
+        
+                    <div class="museu__complete-content">
+                        <p class="paragraph">Aqui, o visitante é acolhido por um filme em 3D, que retrata a vida num povoado neolítico, e nos faz viajar no tempo. As diferentes mesas interactivas permitem ao visitante aceder à informação sobre as peças expostas, algumas com mais de seis mil anos, descobrir como se fazem as escavações e partir à descoberta do maravilhoso mundo do megalitismo. No percurso, o visitante ter-se-á deixado surpreender pela presença inusitada de um homem em tamanho real a fazer placas de xisto…</p>
+                        <p class="paragraph">As várias centenas de peças expostas, cedidas maioritariamente pelo Museu Nacional de Arqueologia, são provenientes das dezenas de escavações arqueológicas, que, no Concelho de Mora, tiveram início em 1914, com Vergílio Correia, de que resultou a obra El Neolítico de Pavía, editada em 1921.</p>
+                        <p class="paragraph">Os quatro edifícios do Museu estão interligados por um corredor protegido com placas metálicas cujas pequenas aberturas simbolizam o geometrismo das placas de xisto.</p>
+                        <p class="paragraph">Sejam, pois, bem-vindos!</p>
+                    </div>
+        
+                    <div class="btn-box">
+                        <a href="" class="btn btn-primary museu__read-more">LER MAIS</a>
+                        <a href="" class="btn btn-secondary u-margin-left-xs">VER INTRO <span class="icon icon--video-camera u-margin-left-xs"></span></a>
+                    </div> 
+                </div>
+                <div class="museu__image-content">
+                    <img src="assets/images/museuImage.jpg" class="museu__image" alt="Imagem descritiva do museu">
+                </div>
             </div>
-
-            <div class="btn-box">
-                <a href="" class="btn btn-primary museu__read-more">LER MAIS</a>
-                <a href="" class="btn btn-secondary u-margin-left-xs">VER INTRO <span class="icon icon--video-camera u-margin-left-xs"></span></a>
-            </div>   
         </div>
+        <div class="museu__triangle museu__triangle--grey"></div>
+        <div class="museu__triangle museu__triangle--brown"></div>
     </section>
 
     <section class="valencias">
