--- a/dev/index.html
+++ b/dev/index.html
@@ -45,14 +45,14 @@
 
         <nav class="navigation__main">
             <ul class="navigation__main__list">
-                <li class="navigation__main__item"><a href="#museu" class="navigation__main__link nav-link">O Museu</a></li>
-                <li class="navigation__main__item"><a href="#megalitismo" class="navigation__main__link nav-link">Megalitismo</a></li>
-                <li class="navigation__main__item"><a href="#educacao" class="navigation__main__link nav-link">Educação</a></li>
-                <li class="navigation__main__item"><a href="#actividades" class="navigation__main__link nav-link">Actividades</a></li>
-                <li class="navigation__main__item"><a href="#horario" class="navigation__main__link nav-link">Horário</a></li>
-                <li class="navigation__main__item"><a href="#precario" class="navigation__main__link nav-link">Preçário</a></li>
-                <li class="navigation__main__item"><a href="#galeria" class="navigation__main__link nav-link">Galeria</a></li>
-                <li class="navigation__main__item"><a href="#contactos" class="navigation__main__link nav-link">Contactos</a></li>
+                <li class="navigation__main__item"><a href="#museu" class="navigation__main__link nav-link" data-menuitem="O Museu">O Museu</a></li>
+                <li class="navigation__main__item"><a href="#megalitismo" class="navigation__main__link nav-link" data-menuitem="Megalitismo">Megalitismo</a></li>
+                <li class="navigation__main__item"><a href="#educacao" class="navigation__main__link nav-link" data-menuitem="Educação">Educação</a></li>
+                <li class="navigation__main__item"><a href="#actividades" class="navigation__main__link nav-link" data-menuitem="Actividades">Actividades</a></li>
+                <li class="navigation__main__item"><a href="#horario" class="navigation__main__link nav-link" data-menuitem="Horário">Horário</a></li>
+                <li class="navigation__main__item"><a href="#precario" class="navigation__main__link nav-link" data-menuitem="Preçário">Preçário</a></li>
+                <li class="navigation__main__item"><a href="#galeria" class="navigation__main__link nav-link" data-menuitem="Galeria">Galeria</a></li>
+                <li class="navigation__main__item"><a href="#contactos" class="navigation__main__link nav-link" data-menuitem="Contactos">Contactos</a></li>
             </ul>
         </nav>
     </div>
