--- a/dev/index.html
+++ b/dev/index.html
@@ -176,19 +176,24 @@
         </div>
     </section>
 
-    <div class="swiper-container postais-swiper">
+    <div class="postais swiper-container postais-swiper">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-                <figure class="postais__figure">
-                    <img src="assets/images/megalitismoSlider/cromeleque-fontainhas_768w.jpg" class="postais__figure-image" alt="Cromeleque das Fontainhas">
-                    <figcaption class="postais__figure-title postais__figure-title--show">Cromeleque das Fontainhas</figcaption>
-                </figure>
-                <div class="postais__info">
-                    <h3 class="postais__heading">Cromeleque das Fontainhas</h3>
-                    <p class="postais__tag">Pavia</p>
-                    <div class="btn-box u-margin-top-m">
-                        <a href="https://goo.gl/maps/GrC1GhfWRMC2" target="_blank" class="btn btn-postais">VER LOCALIZAÇÃO</a>
-                        <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="cromelequeFontainhas">VER DESCRIÇÃO</a>
+                <div class="postais__content">
+                    <figure class="postais__figure">
+                        <img src="assets/images/megalitismoSlider/cromeleque-fontainhas_768w.jpg" class="postais__figure-image" alt="Cromeleque das Fontainhas">
+                        <figcaption class="postais__figure-title postais__figure-title--show">Cromeleque das Fontainhas</figcaption>
+                    </figure>
+                    <div class="postais__info">
+                        <h3 class="postais__heading">Cromeleque das Fontainhas</h3>
+                        <p class="postais__tag">Pavia</p>
+                        <div class="btn-box u-margin-top-m">
+                            <a href="https://goo.gl/maps/GrC1GhfWRMC2" target="_blank" class="btn btn-postais">VER LOCALIZAÇÃO</a>
+                            <a href="" class="btn btn-postais btn-postais-descricao" data-pagename="cromelequeFontainhas">VER DESCRIÇÃO</a>
+                        </div>
+                    </div>
+                    <div class="postais__bottom-nav">
+                        Ver Localização
                     </div>
                 </div>
             </div>
